plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'site.campingon'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // AOP
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    // validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    //lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // mapstruct
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    // swagger
    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.4.0'

    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // OAuth 2.0
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    //S3bucket 사용
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
    implementation platform('software.amazon.awssdk:bom:2.20.0') // 최신 BOM 버전
    implementation 'software.amazon.awssdk:s3'
    implementation 'software.amazon.awssdk:sts'

    //공간데이터 저장 hibernate-spatial
    implementation 'org.hibernate:hibernate-core:6.2.6.Final' // 최신 버전
    implementation 'org.hibernate.orm:hibernate-spatial:6.2.6.Final'
    implementation 'org.locationtech.jts:jts-core:1.20.0'


    //dev-tools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    //db
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'com.mysql:mysql-connector-j'

    // MongoDB
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.mongodb:mongodb-driver-sync'
    implementation 'org.mongodb:mongodb-driver-core'

    // Caffeine
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.github.ben-manes.caffeine:caffeine'

    // redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'


    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

}

test {
    useJUnitPlatform()
}
